--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.10.0",
+    "hoist-non-react-statics": "^3.3.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
